pk: Some distros distribute firmwares

Allow for the components to be included and looked up under drivers.

BUG: 510173
(cherry picked from commit 3246d814829331e49516cdaa1d6eae9cca85d840)